--- a/SampleBarcodeScanner/Base.lproj/Main.storyboard
+++ b/SampleBarcodeScanner/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="height" constant="56" id="Q2s-ck-Pet"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E5L-Ft-trU">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E5L-Ft-trU" customClass="BarcodeScanView" customModule="SampleBarcodeScanner" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="143" width="375" height="635"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -51,7 +51,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="scanView" destination="E5L-Ft-trU" id="fHU-hy-e5B"/>
+                        <outlet property="barcodeScanView" destination="E5L-Ft-trU" id="BgT-nX-DBK"/>
                         <outlet property="switchBarcodeType" destination="Cjh-TS-5lj" id="B1Z-Wp-06p"/>
                     </connections>
                 </viewController>
